tests/int/snapshots/integration__int__use_command__module_module__path_flags_r_t_e_g_G.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::path"
    - "-r"
    - "-t"
    - "-e"
    - "-g"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
module::path
 - crate::constants::PATH_QUALIFIER_SELF
module::path::tests
 - crate::module::path::GroupItem
 - crate::module::path::PathPrefix
 - crate::module::path::PathSuffix
 - crate::module::path::Segments
 - crate::module::path::TypeReference

----- stderr -----
