tests/int/snapshots/integration__int__use_command__module_module__resolve_flags_r_t_e_G.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::resolve"
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::module::resolve::extract_public_items

----- stderr -----
